--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "react-scroll": "^1.9.3",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.11"
   },
